Fix [Jobs] Artifacts: Overlapping columns (#42)
- Jobs:
  - Artifacts tab: Fix Path and Size columns overlap
- Artifacts:
  - Fix hover effect on Download button
  - Fix drill-down bug when selecting some artifacts and details pane
    does not open
- Build:
  - Clean some unnecessary packages and move some packages from
    `dependencies` to `devDependencies`

--- a/src/common/Download/download.scss
+++ b/src/common/Download/download.scss
@@ -2,11 +2,30 @@
 @import '../../scss/shadows';
 
 .download_container {
-  g {
+  .download {
+    cursor: pointer;
+    fill: $white;
+    &:hover {
+      fill: $alabaster;
+    }
+  }
+  .downloading {
     cursor: pointer;
     fill: $purple;
     &:hover {
       fill: $cornflowerBlue;
+    }
+  }
+  .download_container {
+    transform: translate(8px, 8px);
+    rect {
+      fill: $topaz;
+    }
+  }
+  .cancel_container {
+    transform: translate(14px, 14px);
+    rect {
+      fill: $white;
     }
   }
 }
