--- a/src/common/Loader/loader.scss
+++ b/src/common/Loader/loader.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000000;
+  z-index: 999;
 }
 
 .loader {
