--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -182,5 +182,8 @@
     .inputs_container {
       width: 100%;
     }
+    .json {
+      padding: 0 15px;
+    }
   }
 }
